--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
-#ignore .env
-*.env
-
-#except .env.example
-!.env.example
+/node_modules
+.env
+.env.backup
+.env.production
+Homestead.json
+Homestead.yaml
+auth.json
+npm-debug.log
+yarn-error.log
+/.fleet
+/.idea
+/.vscode
